--- a/index.html
+++ b/index.html
@@ -8,26 +8,29 @@
     <script src="https://cdn.tailwindcss.com"></script>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
     <style>
-        body { font-family: 'Inter', sans-serif; }
-        /* Garantir que o root ocupe a tela para evitar flashes brancos */
-        #root { min-height: 100vh; }
+        body { font-family: 'Inter', sans-serif; margin: 0; padding: 0; }
+        #root { min-height: 100vh; display: flex; flex-direction: column; }
     </style>
-<script type="importmap">
+    <script type="importmap">
 {
   "imports": {
     "react": "https://esm.sh/react@19.0.0",
     "react-dom": "https://esm.sh/react-dom@19.0.0",
     "react-dom/client": "https://esm.sh/react-dom@19.0.0/client",
     "recharts": "https://esm.sh/recharts@2.15.0",
-    "react/": "https://esm.sh/react@^19.2.3/",
-    "react-dom/": "https://esm.sh/react-dom@^19.2.3/"
+    "react-dom/": "https://esm.sh/react-dom@^19.2.3/",
+    "react/": "https://esm.sh/react@^19.2.3/"
   }
 }
 </script>
 </head>
-<body class="bg-gray-50 text-gray-900">
-    <div id="root"></div>
-    <!-- O type="module" é essencial para que o navegador processe os imports ES6 -->
-    <script type="module" src="./index.tsx"></script>
+<body class="bg-gray-50">
+    <div id="root">
+        <!-- Carregamento visual simples caso o JS demore -->
+        <div style="display: flex; height: 100vh; width: 100%; justify-content: center; align-items: center; color: #6366f1; font-family: sans-serif;">
+            Iniciando BelezaGestão...
+        </div>
+    </div>
+    <script type="module" src="index.tsx"></script>
 </body>
 </html>
