--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="pt-BR">
 <head>
@@ -23,14 +22,25 @@
   }
 }
 </script>
+    <script>
+      // Pequeno script para capturar erros de carregamento de módulos
+      window.addEventListener('error', function(e) {
+        if (e.target.tagName === 'SCRIPT') {
+          console.error('Erro ao carregar script:', e.target.src);
+        }
+      }, true);
+    </script>
 </head>
 <body class="bg-gray-50">
     <div id="root">
-        <!-- Carregamento visual simples caso o JS demore -->
-        <div style="display: flex; height: 100vh; width: 100%; justify-content: center; align-items: center; color: #6366f1; font-family: sans-serif;">
-            Iniciando BelezaGestão...
+        <div style="display: flex; height: 100vh; width: 100%; justify-content: center; align-items: center; color: #6366f1; font-family: sans-serif; flex-direction: column; gap: 10px;">
+            <div style="width: 40px; height: 40px; border: 4px solid #f3f3f3; border-top: 4px solid #6366f1; border-radius: 50%; animation: spin 1s linear infinite;"></div>
+            <span>Iniciando BelezaGestão...</span>
         </div>
     </div>
+    <style>
+      @keyframes spin { 0% { transform: rotate(0deg); } 100% { transform: rotate(360deg); } }
+    </style>
     <script type="module" src="index.tsx"></script>
 </body>
 </html>
