--- a/index.html
+++ b/index.html
@@ -16,31 +16,23 @@
     "react": "https://esm.sh/react@19.0.0",
     "react-dom": "https://esm.sh/react-dom@19.0.0",
     "react-dom/client": "https://esm.sh/react-dom@19.0.0/client",
-    "recharts": "https://esm.sh/recharts@2.15.0",
+    "recharts": "https://esm.sh/recharts@2.15.0?external=react,react-dom",
     "react-dom/": "https://esm.sh/react-dom@^19.2.3/",
     "react/": "https://esm.sh/react@^19.2.3/"
   }
 }
 </script>
-    <script>
-      // Pequeno script para capturar erros de carregamento de módulos
-      window.addEventListener('error', function(e) {
-        if (e.target.tagName === 'SCRIPT') {
-          console.error('Erro ao carregar script:', e.target.src);
-        }
-      }, true);
-    </script>
 </head>
 <body class="bg-gray-50">
     <div id="root">
-        <div style="display: flex; height: 100vh; width: 100%; justify-content: center; align-items: center; color: #6366f1; font-family: sans-serif; flex-direction: column; gap: 10px;">
-            <div style="width: 40px; height: 40px; border: 4px solid #f3f3f3; border-top: 4px solid #6366f1; border-radius: 50%; animation: spin 1s linear infinite;"></div>
-            <span>Iniciando BelezaGestão...</span>
+        <div style="display: flex; height: 100vh; width: 100%; justify-content: center; align-items: center; color: #6366f1; font-family: sans-serif; flex-direction: column; gap: 15px;">
+            <div style="width: 40px; height: 40px; border: 4px solid #e2e8f0; border-top: 4px solid #6366f1; border-radius: 50%; animation: spin 0.8s linear infinite;"></div>
+            <span style="font-weight: 600; letter-spacing: -0.025em;">Iniciando BelezaGestão...</span>
         </div>
     </div>
     <style>
       @keyframes spin { 0% { transform: rotate(0deg); } 100% { transform: rotate(360deg); } }
     </style>
-    <script type="module" src="index.tsx"></script>
+    <script type="module" src="./index.tsx"></script>
 </body>
 </html>
